--- a/runtime/test-runtime/client/Cargo.toml
+++ b/runtime/test-runtime/client/Cargo.toml
@@ -16,14 +16,14 @@ polkadot-test-runtime = { path = ".." }
 polkadot-test-service = { path = "../../../node/test-service" }
 
 # Substrate dependencies
-pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-light = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-service = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["test-helpers"],  default-features = false }
-sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
-substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+sc-light = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+sc-service = { git = "https://github.com/paritytech/substrate", features = ["test-helpers"],  default-features = false , branch = "seun-babe-manual-seal" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
