--- a/core-primitives/Cargo.toml
+++ b/core-primitives/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 
 [dependencies]
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "seun-babe-manual-seal" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "seun-babe-manual-seal" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "seun-babe-manual-seal" }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "kiz-seun-test-runner" }
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "kiz-seun-test-runner" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "kiz-seun-test-runner" }
 codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = [ "derive" ] }
 
 [features]
