--- a/node/core/bitfield-signing/Cargo.toml
+++ b/node/core/bitfield-signing/Cargo.toml
@@ -12,5 +12,5 @@ log = "0.4.8"
 polkadot-primitives = { path = "../../../primitives" }
 polkadot-node-subsystem = { path = "../../subsystem" }
 polkadot-node-subsystem-util = { path = "../../subsystem-util" }
-keystore = { package = "sc-keystore", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+keystore = { package = "sc-keystore", git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
 wasm-timer = "0.2.4"
