--- a/node/network/availability-distribution/Cargo.toml
+++ b/node/network/availability-distribution/Cargo.toml
@@ -15,15 +15,15 @@ polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../../subsys
 polkadot-network-bridge = { path = "../../network/bridge" }
 polkadot-node-network-protocol = { path = "../../network/protocol" }
 polkadot-node-subsystem-util = { path = "../../subsystem-util" }
-sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
 derive_more = "0.99.9"
-sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"]  , branch = "seun-babe-manual-seal" }
+sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"]  , branch = "kiz-seun-test-runner" }
 
 [dev-dependencies]
 polkadot-subsystem-testhelpers = { package = "polkadot-node-subsystem-test-helpers", path = "../../subsystem-test-helpers" }
 bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
-sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"] , branch = "seun-babe-manual-seal" }
-sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"] , branch = "kiz-seun-test-runner" }
+sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
 parking_lot = "0.11.0"
 futures-timer = "3.0.2"
 env_logger = "0.7.1"
