--- a/node/network/collator-protocol/Cargo.toml
+++ b/node/network/collator-protocol/Cargo.toml
@@ -24,7 +24,7 @@ smol-timeout = "0.1.0"
 smallvec = "1.4.2"
 futures-timer = "3.0.2"
 
-sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"] , branch = "seun-babe-manual-seal" }
-sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
+sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"] , branch = "kiz-seun-test-runner" }
+sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
 
 polkadot-subsystem-testhelpers = { package = "polkadot-node-subsystem-test-helpers", path = "../../subsystem-test-helpers" }
